# embebidos-proyecto3

./: .gitignore
driver_ht16k33/: CMakeLists.txt  Makefile  default.nix
driver_ht16k33/include/: ht16k33.h
driver_ht16k33/lib/: CMakeLists.txt  ht16k33.c
driver_ht16k33/test/: prueba_matriz.c
image/: CMakeLists.txt  Makefile  default.nix
image/include/: filtros.hpp  ompfilters.hpp
image/lib/: CMakeLists.txt  ompfilters.cpp
image/prueba/: gfg  prueba.c
image/src/: filtros.cpp  main.cpp
nixos/: README.md  flake.nix
nixos/triviOS/: boot.nix  cli.nix  cross.nix  default.nix  minimal.nix  net.nix  overlay.nix  vendor.nix  web.nix
server/: CMakeLists.txt  README.md  default.nix
server/include/: parse.h  process_image.h
server/src/: connection_handler.cpp  main.c  parse.c
